[package]
authors = ["Gajo Petrovic <gajopetrovic@gmail.com>"]
description = "Control flow macros for Option and Result"
edition = "2021"
homepage = "https://github.com/gajop/ctrl_macros"
license = "MIT OR Apache-2.0"
name = "ctrl_macros"
repository = "https://github.com/gajop/ctrl_macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
